--- a/Areas/Widgets/Content/site.css
+++ b/Areas/Widgets/Content/site.css
@@ -4,6 +4,17 @@
 .code-sm {
   font-size: 0.7em;
 }
+@-webkit-keyframes codechange {
+  10% {
+    background-color: #dddddd;
+  }
+  50% {
+    background-color: #ddffdd;
+  }
+  100% {
+    background-color: #dddddd;
+  }
+}
 @keyframes codechange {
   10% {
     background-color: #dddddd;
@@ -16,9 +27,12 @@
   }
 }
 .code-change.ng-animate {
-  animation-name: codechange;
-  animation-duration: 1s;
-  animation-iteration-count: 2;
+  -webkit-animation-name: codechange;
+          animation-name: codechange;
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
+  -webkit-animation-iteration-count: 2;
+          animation-iteration-count: 2;
 }
 .ltw-builder-tools {
   position: relative;
