--- a/Areas/Widgets/Content/site.less
+++ b/Areas/Widgets/Content/site.less
@@ -34,6 +34,9 @@
 		width:100%;
 		height: 0;
 		.opacity(0.3);
+		// & > .pull-right {
+		// 	margin-right: -10px;
+		// }
 	}
 	&:hover .ltw-tool-form-update {
 		.opacity(1);
