--- a/Content/site-bootstrap.less
+++ b/Content/site-bootstrap.less
@@ -1,6 +1,31 @@
 @import "less/bootstrap/bootstrap.less";
 @icon-font-path: "/fonts/";
 
+// Roboto and Open Sans fonts
+@font-face {
+	font-family: 'Open Sans';
+	src: url('/fonts/OpenSans-Regular-webfont.eot');
+	src: url('/fonts/OpenSans-Regular-webfont.eot?#iefix') format('embedded-opentype'),
+		url('/fonts/OpenSans-Regular-webfont.woff') format('woff'),
+		url('/fonts/OpenSans-Regular-webfont.ttf') format('truetype'),
+		url('/fonts/OpenSans-Regular-webfont.svg#OpenSans') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Roboto';
+	src: url('/fonts/Roboto-Regular-webfont.eot');
+	src: url('/fonts/Roboto-Regular-webfont.eot?#iefix') format('embedded-opentype'),
+		url('/fonts/Roboto-Regular-webfont.woff') format('woff'),
+		url('/fonts/Roboto-Regular-webfont.ttf') format('truetype'),
+		url('/fonts/Roboto-Regular-webfont.svg#Roboto') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-family-sans-serif:  Roboto, Open Sans, "Helvetica Neue", Helvetica, Arial, sans-serif;
+
 //** Breadcrumb background color
 @breadcrumb-bg:				#f7f7f7;
 //** Breadcrumb text color
